src/deployement.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: will-app
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: will-app
  template:
    metadata:
      labels:
        app: will-app
    spec:
      containers:
      - name: wapp
        image: wil42/playground:v1
        ports:
        - containerPort: 8888
---
apiVersion: v1
kind: Service
metadata:
  name: will-app-service
  namespace: dev
spec:
  ports:
  - port: 8888
    targetPort: 8888
  selector:
    app: will-app
  type: LoadBalancer
