src/service.yml
apiVersion: v1
kind: Service
metadata:
  name: will-app-service
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8888
      protocol: TCP
      name: http
  selector:
    app: will-app
